# chat-o-sophy

./: .env.example  .gitignore  Dockerfile  Home.py  README.md  api.py  chatbot.py  chatbots.py  logo.py  model_providers.yaml  pyproject.toml  stop.sh  streaming.py  test.py
.streamlit/: .secrets.toml.example
chatbots/: __init__.py  multi_chatbots.py  single_chatbot.py
config/: models.yaml  providers.yaml
data/: philosophers.yaml  prompts.yaml
pages/: 1_💬_single_mode.py  2_👥_multi_mode.py  logs.py
sidebar/: __init__.py  api_manager.py  language_manager.py  sidebar.py
src/: Home.py  chatbot.py  logo.py
src/chat_o_sophy/: Home.py  chatbot.py  llm_guard.py
src/chat_o_sophy/pages/: 1_💬_CHAT_–_single_mode.py  2_👥_CHAT_–_multi_mode.py  3_📄_README.py
src/chat_o_sophy/sidebar/: model_api_manager.py
src/pages/: 1_💬_CHAT_–_single_mode.py  1_💬_single_mode.py  2_👥_CHAT_–_multi_mode.py  2_👥_multi_mode.py
src/sidebar/: api_manager.py  lakera_api_manager.py  language_manager.py  model_api_manager.py  sidebar.py
utils/: api_key.py  api_manager.py  chat_history.py  history.py  language_manager.py  logging.py  logo.py  streaming.py  type_as.py  typing.py
