[tool.poetry]
name = "chat-o-sophy"
version = "0.0.0"
description = "Chat with your favorite philosohpers!"
authors = ["Daniel Altunay"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.28.1"
watchdog = "^3.0.0"
langchain = "^0.0.323"
openai = "^0.28.1"
replicate = "^0.15.5"
types-requests = "^2.31.0.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
isort = "^5.12.0"
mypy = "^1.6.1"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
